--- a/ProductManagementDemo/WPFApp/MainWindow.xaml
+++ b/ProductManagementDemo/WPFApp/MainWindow.xaml
@@ -74,15 +74,7 @@
             <ComboBox x:Name="cboCategory" Margin="4,4,4,4" Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="2" />
 
             <DataGrid x:Name="dgData" Margin="4,4,4,63" Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="2" 
-                      AutoGenerateColumns="False" SelectionChanged="dgData_SelectionChanged">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="Product ID" Binding="{Binding id}" />
-                    <DataGridTextColumn Header="Product Name" Binding="{Binding name}" />
-                    <DataGridTextColumn Header="Units In Stock" Binding="{Binding unitInStock}" />
-                    <DataGridTextColumn Header="Unit Price" Binding="{Binding price}" />
-                    <DataGridTextColumn Header="Category " Binding="{Binding catId}" />
-                </DataGrid.Columns>
-            </DataGrid>
+        SelectionChanged="dgData_SelectionChanged" />
 
             <Button x:Name="btnCreate" Content="Create" HorizontalAlignment="Left"
         Margin="29,365,0,16" Grid.Row="6" Grid.RowSpan="2" Width="121" Background="#FF0099FF" 
